--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <h2>About me</h2>
     <p>Olahraga billiard adalah olahraga yang sedang saya tekuni belakangan ini. karena billiard melatih fokus kita</p>
     <h2>Projects</h2>
-    <p></p>
+    <p>on going</p>
+    <p>example for tekweb</p>
+    <h2>contact</h2>
+    <p>alif54316@gmail.com</p>
+    
+
 </body>
 </html>
